--- a/styles/create-point.css
+++ b/styles/create-point.css
@@ -91,8 +91,45 @@ form button{
     border-radius: 8px;
     border: 0;
     transition: 400ms;
-    
+    margin-top: 45px;
 }
 form button:hover{
     background-color: #2fb86e;
+}
+
+.itens-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 16px;
+}
+
+.itens-grid li{
+    background-color: #f5f5f5;
+    list-style: none;
+    border: 2px solid #f5f5f5;
+    border-radius: 8px;
+    padding: 32px 24px 16px;
+    height: 180px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+.itens-grid li span{
+    flex: 1;
+    display: flex;
+    align-items: center;
+    color: var(--tittle-color);
+}
+
+.itens-grid li.selected{
+    background-color: #e1faec;
+    border: 2px solid #34cb74;
+}
+
+.itens-grid li img,
+.itens-grid li span{
+    pointer-events: none;
 }
